[package]
name = "ko-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["cargo"] }

ko-config = { path = "./config" }
ko-core = { path = "./core" }
ko-core-assembler = { path = "./core/assembler" }
ko-core-driver = { path = "./core/driver" }
ko-core-executor = { path = "./core/executor" }
ko-protocol = { path = "./protocol" }
ko-rpc = { path = "./rpc" }
ko-rpc-client = { path = "./rpc/client" }

[workspace]
members = [
    "core",
    "core/assembler",
    "core/driver",
    "core/executor",
    
    "protocol",

    "rpc",
    "rpc/backend",
    "rpc/client",
]
