[package]
name = "ko-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["cargo"] }

ko-config = { path = "./config" }
ko-context = { path = "./context" }
ko-context-assembler = { path = "./context/assembler" }
ko-context-driver = { path = "./context/driver" }
ko-context-executor = { path = "./context/executor" }
ko-protocol = { path = "./protocol" }
ko-backend = { path = "./backend" }
ko-rpc = { path = "./rpc" }
ko-rpc-client = { path = "./rpc/client" }

[workspace]
members = [
    "context",
    "context/assembler",
    "context/driver",
    "context/executor",
    
    "backend",
    "protocol",

    "rpc",
    "rpc/client",
    "rpc/server",
]
