[package]
name = "ko-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ko-context-assembler = { path = "./assembler" }
ko-context-driver = { path = "./driver" }
ko-context-executor = { path = "./executor" }
ko-protocol = { path = "../protocol" }

[dev-dependencies]
ko-rpc-client = { path = "../rpc/client" }
