[package]
name = "ko-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ko-core-assembler = { path = "./assembler" }
ko-core-driver = { path = "./driver" }
ko-core-executor = { path = "./executor" }
ko-protocol = { path = "../protocol" }

[dev-dependencies]
ko-rpc-client = { path = "../rpc/client" }
