[package]
name = "ko-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
ckb-types = "0.104"
ckb-sdk = "1.1"
derive_more = "0.99"
lazy_static = "1.4"
molecule = "0.7"
secp256k1 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["full"] }
