[package]
name = "ko-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ko-protocol = { path = "../protocol", features = [ "mock" ] }
ko-rpc-backend = { path = "./backend" }
ko-rpc-server = { path = "./server" }

[dev-dependencies]
jsonrpsee-core = "0.15"
jsonrpsee-http-client = "0.15"

ko-rpc-client = { path = "./client" }
