[package]
name = "ko-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ko-protocol = { path = "../protocol" }
ko-rpc-backend = { path = "./backend" }
ko-rpc-server = { path = "./server" }

[dev-dependencies]
jsonrpsee = { version = "0.15", features = ["http-server", "http-client"] }

ko-rpc-client = { path = "./client" }