[package]
name = "ko-core-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ko-protocol = { path = "../../protocol" }
mlua = { version = "0.8", features = ["lua54", "serialize", "vendored"] }
