[package]
name = "ko-rpc-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-hash = "0.101"
mlua = { version = "0.8", features = ["lua54", "serialize", "vendored"] }

ko-protocol = { path = "../../protocol" }

[dev-dependencies]
ko-context = { path = "../../context" }
ko-rpc-client = { path = "../../rpc/client" }
