[package]
name = "ko-rpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
jsonrpc-core = "18.0"
reqwest = { version = "0.11", features = ["json"] }

ko-protocol = { path = "../../protocol" }
