[package]
name = "ko-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee-http-server = "0.15"
jsonrpsee-types = "0.15"
jsonrpsee-core = "0.15"

ko-protocol = { path = "../../protocol" }
