[package]
name = "ko-rpc-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
ckb-jsonrpc-types = "0.104"
ckb-types = "0.104"
jsonrpsee = { version = "0.15", features = ["http-server", "macros", "ws-server"] }
serde = { version = "1.0", features = ["derive"] }

ko-protocol = { path = "../../protocol" }
